package engine;

public enum EngineState {
    RUNNING,
    PAUSED
}